packages = [
    { include = "src" },
]

[tool.poetry]
name = "project#2_Rusakov_Egor"
version = "0.1.0"
description = "Python study project №2"
authors = ["Ekrusakov <Ekrusakov04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
