[tool.poetry]
name = "primitive-db"
version = "0.1.0"
description = "Python study project №2"
authors = ["Ekrusakov <Ekrusakov04@gmail.com>"]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "src" },
]
 