[tool.poetry]
name = "primitive_db"
version = "0.1.0"
description = "Python study project №2"
authors = ["Ekrusakov <Ekrusakov04@gmail.com>"]

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.poetry.group.dev.dependencies]
asciinema = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "src",  from = "."},
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []